# tasks-war-arena

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
.github/workflows/: rust.yml
example-task/: Cargo.toml  out.wasm  out.wat  out2.wat
example-task/src/: lib.rs  main.rs
task-examples/: Cargo.toml
tasks-war-bindings/: Cargo.toml
tasks-war-bindings/src/: external.rs  lib.rs
tasks-war-examples/: Cargo.toml
tasks-war-runtime/: Cargo.toml
tasks-war-runtime-bin/: Cargo.toml
tasks-war-runtime-bin/src/: cli.rs  main.rs  replay.rs  run.rs
tasks-war-runtime/examples/: example-task-wasi.wasm  example-task.wasm  example_task.wasm  example_task.wat
tasks-war-runtime/src/: cli.rs  command.rs  game.rs  game_memento.rs  game_replay.rs  game_with_history.rs  lib.rs  main.rs  runtime.rs
tasks-war-runtime/src/game/: Untitled-1.avsc  board.rs  commons.rs  fruits.rs  tasks.rs  tests.rs
tasks-war-runtime/src/game_memento/: avro.avsc  avro.rs  tests.rs
tasks-war-runtime/src/runtime/: bots.rs  task_handle.rs  task_runner.rs  tests.rs
tasks-war-runtime/src/runtime/bots/: wasm.rs
tasks-war-runtime/src/runtime/bots/wasm/: tests.rs
tasks-war-runtime/tests/: example_integration_tests.rs
tasks-war-runtime/wasm_modules/: example-task-wasi.wat  example-task.wasm  example-task.wat  look-if-empty.wasm  look-once.wasm  move-down.wasm  move-left.wasm  move-right-forever.wasm  move-right.wasm  move-up.wasm  seek-and-eat.wasm  split-and-seek.wasm  split-once.wasm  task-examples.wasm  task.wat
tasks-war-visualizer/: Cargo.toml
tasks-war-visualizer/src/: lib.rs
tasks-war-website/: Cargo.toml
tasks-war-website/assets/: index.html
tasks-war-website/assets/css/: main.css
tasks-war-website/src/: main.rs
