[package]
name = "tasks-war-runtime-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "tasks-war"
path = "src/main.rs"


[dependencies]

anyhow = "1.0.86"
atty = "0.2.14"
clap = { version = "4.4.6", features = ["derive"] }
rand = "0"
serde_json = "1.0.107"
tasks-war-runtime = { path = "../tasks-war-runtime" }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
