[package]
name = "tasks-war-runtime"
version = "0.1.0"
edition = "2021"


[lib]
name = "tasks_war_runtime"
path = "src/lib.rs"

# [[bin]]
# name = "task-war-runtime"
# path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "^13.0.0" 
wasmtime-wasi = "^13.0.0"
tokio = { version = "1", features = ["full"] }
rand = "0"
async-trait = "*"
# futures = "0"