[package]
name = "tasks-war-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "tasks_war_runtime"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
apache-avro = { version = "0.16.0", features = ["derive"] }
async-trait = "*"
rand = "0"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
wasmtime = "14.0.1"
wasmtime-wasi = "18.0.4"
